# cyberagent

./: .env.example  .gitignore  CHANGELOG.md  README.md  README.zh.md  SKILL.md  pyproject.toml  tea.yaml
.github/workflows/: publish.yml
docs/: disclaimer.md  quickstart.md
examples/: README.md  basic.py
src/cyberagent/: __init__.py  chain.py  cli.py  llm_adapter.py  web.py
src/cyberagent/adapters/: __init__.py  stock.py
src/cyberagent/depts/: __init__.py
src/cyberagent/prompts/: __init__.py  departments.py
